<resources>
    <string name="app_name">Tahlil Memorial</string>
    <string name="id_unit_interstitial" translatable="false">ca-app-pub-5079073523461972/1742849787</string>
    <string name="id_unit_interstitial_sample_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="id_unit_banner" translatable="false">ca-app-pub-5079073523461972/3491045724</string>
    <string name="id_unit_banner_sample_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Text Arabic -->
    <string name="text_arabic_allah" translatable="false">ُ لِلَّه</string>
    <string name="text_arabic_alhamdulillah" translatable="false">اَلْحَمْدُ لِلَّه</string>
    <string name="text_arabic_subhanallah" translatable="false">سُبْحَانَ اللّهُ</string>
    <string name="text_arabic_laila" translatable="false">لاَ إِلَهَ إِلاَّ اللهُ</string>
    <string name="text_arabic_allahu_akbar" translatable="false">اَللّهُ اَكْبَرُ</string>

    <!-- Text -->
    <string name="label_your_dhikr">Your Dhikr</string>
    <string name="label_popular_dhikr">Popular Dhikr</string>
    <string name="label_info_fav_dhikr">You Can Add\nYour Favorite Dhikr</string>
    <string name="label_info_add_dhikr">You can add\nany dhikr you want</string>
    <string name="label_count">Count</string>
    <string name="label_memorial">Memorial</string>
    <string name="label_reset">Reset</string>
    <string name="label_counter_x" translatable="false">%1$dx</string>
    <string name="label_memorial_message" translatable="false">Remember your loved ones with prayer</string>
    <string name="text_latin_subhanallah" translatable="false">Subhanallah</string>
    <string name="text_latin_alhamdulillah" translatable="false">Alhamdulillah</string>
    <string name="text_latin_allahu_akbar" translatable="false">Allahu Akbar</string>
    <string name="text_latin_astaghfirullah" translatable="false">Astaghfirullah</string>
    <string name="text_latin_laailaahaillallah" translatable="false">Laailaaha illallah</string>
    <string name="label_text_counter_hint" translatable="false">00000</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_title_dialog_reset">Counter will be reset?</string>
    <string name="label_message_dialog_reset">Are you sure you want to reset the counter?</string>
    <string name="label_bismillahirrahmanirrahim">Bismillahirrahmanirrahim</string>
    <string name="label_choose_themes">Choose Themes</string>
    <string name="label_themes">Themes</string>
    <string name="label_more">More</string>
    <string name="label_picker_eid_al_fitr">Eid Al-Fitr</string>
    <string name="label_picker_yellow">Yellow</string>
    <string name="label_picker_kaaba">Kaaba</string>
    <string name="label_picker_ramadhan">Ramadhan</string>
    <string name="label_picker_black_white">BlackWhite</string>
    <string name="label_picker_default">Default</string>
    <string name="label_picker_flowers">Flower</string>
    <string name="label_picker_leaves">Leaves</string>
    <string name="label_rating_and_review_apps">Rating and Review Tahlil Memorial App</string>
    <string name="label_our_applications">Our Applications</string>
    <string name="label_vibration">Vibration</string>
    <string name="label_sound">Sound</string>
    <string name="label_delete">Delete Your Dhikr</string>
    <string name="label_delete_confirmation">Delete Your Dhikr</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_target_dhikr">Target Dhikr</string>
    <string name="hint_target_dhikr">Enter the number of your reminder dhikr</string>
    <string name="label_simpan">Save</string>
    <string name="label_information">Information</string>
    <string name="label_desc_information_target_change">Changes made will be applied to all dhikr</string>
    <string name="label_dont_show_again">Don\'t show it again</string>
    <string name="label_add_dhikr">Add Dhikr</string>
    <string name="label_message_delete_confirm">Are you sure want to delete this dhikr?</string>
    <string name="label_language">Language</string>
    <string name="label_notification">App Notifications</string>
    <string name="label_share">Share to your friends</string>
    <string name="label_instagram">Follow MyDhikr on Instagram</string>
    <string name="label_share_text">Share MyDhikr Apps</string>
    <string name="label_notification_title">Have you done dhikr today?</string>
    <string name="label_notification_text">Don\'t forget to dhikr with MyDhikr Apps...</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Simpan</string>
    <string name="label_next">Next</string>
    <string name="label_skip_guide">Skip, I Understand</string>
    <string name="label_hint_add_dhikr">Type the dhikr you want to add</string>
    <string name="label_info_change_theme">You can change \nthe theme you like</string>
    <string name="label_set_target_dhikr">Set your dhikr target</string>

    <!--************************ Section Dhikr ************************-->
    <string name="label_dhikr_morning">Morning Dhikr</string>
    <string name="label_dhikr_evening">Evening Dhikr</string>
    <string name="label_prayer_morning">Morning Prayer</string>
    <string name="label_prayer_evening">Evening Prayer</string>
    <!--************************ End Section Dhikr ************************-->


    <!--************************ Section Analytic ************************-->
    <string name="analytic_morning" translatable="false">Morning Dhikr</string>
    <string name="analytic_evening" translatable="false">Evening Dhikr</string>
    <string name="analytic_morning_complete" translatable="false">Morning Dhikr Complete</string>
    <string name="analytic_evening_complete" translatable="false">Evening Dhikr Complete</string>
    <string name="analytic_morning_pray" translatable="false">Morning Pray Complete</string>
    <string name="analytic_evening_pray" translatable="false">Evening Pray Complete</string>
    <!--************************ End Section Analytic ************************-->


    <!--************************ Section Surah ************************-->
    <string name="label_surah_mean_al_mulk">The Sovereignty</string>
    <string name="label_surah_mean_al_baqarah">The Heifer or The Cow</string>
    <string name="label_surah_mean_al_waqiah">The Inevitable</string>
    <string name="label_surah_mean_ar_rahman">The Merciful</string>
    <string name="label_surah_mean_ar_yasin">Yasin</string>
    <string name="label_number_of_ayah">Verse %d</string>
    <string name="label_new" translatable="false">New</string>
    <string name="label_surah_al_mulk">Surat Al Mulk</string>
    <string name="label_surah_yasin" translatable="false">Surat Yasin</string>
    <string name="list_of_the_surah">List of the surah</string>
    <string name="label_read">Read</string>
    <string name="surah_al_baqarah" translatable="false">Surah Al Baqarah</string>
    <string name="label_surah_al_baqarah" translatable="false">Surah Al Baqarah</string>
    <string name="label_assalamualaikum" translatable="false">Assalamualaikum</string>
    <string name="label_salam_person" translatable="false">Shaahibul Qur\'an</string>
    <string name="label_lets_read" translatable="false">Let\'s Read</string>
    <string name="label_quran_everyday" translatable="false">Quran Everyday</string>
    <string name="label_welcome_to" translatable="false">Welcome to</string>
    <string name="label_your_quran" translatable="false">Your Quran</string>
    <string name="label_on_board_start" translatable="false">Let\'s Get Started!</string>
    <string name="label_female" translatable="false">Female</string>
    <string name="label_male" translatable="false">Male</string>
    <string name="label_increase_size_text">Increase text size for Arabic, Latin, and Translations</string>
    <string name="label_decrease_size_text">Decrease text size for Arabic, Latin, and Translations</string>
    <string name="label_show_quran_text_in_latin">Show Quran text in Latin characters</string>
    <string name="label_show_quran_text_translations">Show The Quran Translations</string>
    <string name="label_choose_the_language_app">Choose the Language of this App</string>
    <!--************************ End Section Surah ************************-->
</resources>